Fix input type number on mobile

--- a/src/assets/css/token_select.scss
+++ b/src/assets/css/token_select.scss
@@ -428,6 +428,7 @@
     border: none !important;
     box-shadow: none !important;
     text-align: right;
+    font-weight: 400;
 
     &.error {
       color: #ee344e;
